@@ -3,6 +3,7 @@ Release Notes
 Head, planned as v0.25
 - move the "lib" folder from the "examples" folder to the root folder.
 - Reordering of the cells in the K-Map
+- Counters are able to act as program counters via the remote interface.
 - 74193 was added
 
 v0.24, released on 1. Feb. 2020
